--- a/ToDoApp/templates/footer.html
+++ b/ToDoApp/templates/footer.html
@@ -1,1 +1,10 @@
-<h1>Footer</h1>
+<footer>
+  <p>© 2025 DynamixWave ToDo App. All rights reserved.</p>
+  <p>
+    Developed by
+    <a href="https://github.com/luis-kael" target="_blank">Si Thu Kaung Sett</a> |
+    <a href="mailto:sithukaungsett2001@email.com">Contact</a> |
+    <a href="/privacy-policy" target="_blank">Privacy Policy</a> |
+    <a href="/terms-of-service" target="_blank">Terms of Service</a>
+  </p>
+</footer>
