--- a/ToDoApp/myapp/templates/index.html
+++ b/ToDoApp/myapp/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 <div>
-  <h1>DynamixWave ToDo List</h1>
-  <a href="{% url 'TodoCreate' %}" class="create-button">+ Create</a>
+  <h1>DynamixWave To Do List</h1>
+  <a href="{% url 'TodoCreate' %}" class="create-button">Create New Form</a>
   <br /><br /><br />
 </div>
 
