--- a/ToDoApp/templates/base.html
+++ b/ToDoApp/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
     <link rel="stylesheet" href="{% static 'css/create_update.css' %}" />
+     <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
     <title>Django ToDo App</title>
   </head>
   <body>
