--- a/ToDoApp/static/css/styles.css
+++ b/ToDoApp/static/css/styles.css
@@ -29,7 +29,9 @@ a {
     color: var(--light-green);
     text-decoration: none;
     font-weight: 600;
-    margin-right: 8px;
+    margin: 10px 0px 20px 30px;
+    display: inline-block;
+    text-decoration: none;
 }
 
 a:hover {
@@ -78,6 +80,11 @@ a.button {
     background-color: var(--phthalo-green);
     color: var(--text-light);
     text-decoration: none;
+    padding: 10px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
     transition: background-color 0.3s ease;
 }
 
